[package]
name = "pcf8523"
description = "A library to interact with PCF8523 devices"
license = "MIT"
version = "0.2.0"
authors = ["Lane Kolbly <lane@rscheme.org>", "Ryan Pavlik <ryan.pavlik@collabora.com>"]
edition = "2018"
keywords = ["no-std", "io-expander", "expander", "embedded-hal", "i2c"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
chrono = "0.4.19"
embedded-hal = "1.0.0-alpha.6"
