[package]
authors = ["Lane Kolbly <lane@rscheme.org>", "Ryan Pavlik <ryan.pavlik@collabora.com>"]
categories = ["embedded", "no-std", "hardware-support"]
description = "A library to interact with PCF8523 devices"
edition = "2018"
keywords = ["no-std", "io-expander", "expander", "embedded-hal", "i2c"]
license = "MIT"
name = "pcf8523"
version = "0.2.0"

[dependencies]
chrono = {version = "0.4.19", default-features = false}
embedded-hal = {version = "0.2.6", features = ["unproven"]}
# embedded-hal = "1.0.0-alpha.6"
